# projectA

./: .gitignore  README.md  pyproject.toml
commands/: create_base_repo_command.py  track_new_file_command.py
src/commands/: add_command.py  clone_command.py  commit_command.py  init_command.py
src/repositories/: repositories.py
